# better-notepad

./: README.md  package-lock.json  package.json
src/: index.html  note.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  window_state.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
