[package]
name = "better-notepad"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "better_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.4"
open = "5"
encoding_rs = "0.8"
chardetng = "0.1"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winver",
    "shellapi", 
    "winuser",
    "commdlg"
] }
